# vision-desktop-agent

./: .env.example  .gitignore  README.md  TJM Design Document.docx  TJM_README.md  automate.py  capture_annotated.py  pyproject.toml  requirements.txt
docs/: DESIGN.md  design_doc.md
src/: __init__.py  main.py
src/api/: __init__.py  posts_client.py
src/automation/: __init__.py  desktop_controller.py  notepad_workflow.py
src/grounding/: __init__.py  detector.py  embeddings.py  ranking.py
src/utils/: __init__.py  logger.py  screenshot.py
tests/: conftest.py  test_api.py  test_detector.py  test_grounder.py  test_ranking.py  test_screenshot.py
util/: utils.py
