[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-desktop-agent"
version = "0.1.0"
description = "Vision-based desktop automation with dynamic icon grounding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nada", email = "nada7224@icloud.com" }]
keywords = ["computer-vision", "desktop-automation", "grounding", "clip", "gui-agents"]

dependencies = [
    # Vision & ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "open-clip-torch>=2.24.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",

    # OCR
    "pytesseract>=0.3.10",

    # Desktop automation
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "keyboard>=0.13.5",

    # API / networking
    "httpx>=0.26.0",
    "tenacity>=8.2.0",

    # Data / config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Logging & CLI
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer>=0.9.0",

    # Performance monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
vision-agent = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
