[project]
name = "tjm-vision-automation"
version = "0.1.0"
description = "Vision-based desktop automation with dynamic icon grounding (TJM Labs assignment)"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "easyocr",
    "supervision==0.18.0",
    "openai==1.3.5",
    "transformers==4.38.2",
    "ultralytics==8.3.70",
    "azure-identity",
    "numpy==1.26.4",
    "opencv-python",
    "opencv-python-headless",
    "gradio",
    "dill",
    "accelerate",
    "timm",
    "einops==0.8.0",
    "paddlepaddle",
    "paddleocr",
    "pyautogui==0.9.54",
    "requests",
    "pygetwindow",
]

[tool.uv]
package = false